resposive search bar

--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -38,7 +38,7 @@
                     clip-rule="evenodd" />
                 </svg>
               </div>
-              <input (keyup)="searchUser($event)" id="search" name="search" class="hidden md:block w-full bg-white border border-gray-300 rounded-md py-2 pl-10 pr-3 text-sm
+              <input autocomplete="off" (keyup)="searchUser($event)" id="search" name="search" class="hidden md:block w-full bg-white border border-gray-300 rounded-md py-2 pl-10 pr-3 text-sm
               placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
               focus:ring-rose-500 focus:border-rose-500 sm:text-sm" placeholder="Buscar usuarios" type="search">
 
@@ -48,19 +48,20 @@
               <div *ngIf="usersReceived != null">
                 <div *ngFor="let user of usersReceived; index as i;">
                   <!-- TODO: add hover and imporve display of divs beyond the navbar-->
-                  <div style="position:absolute; width: 57%; z-index: 40;" class="bg-white border border-gray-300 rounded-md py-2 pl-10 pr-2 text-sm
+                  <div style="position:absolute; width: 57%; z-index: 40;" class="hidden md:block bg-white border hover:bg-gray-300 border-gray-300 rounded-md py-2 pl-10 pr-2 text-sm
                   placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
                   focus:ring-rose-500 focus:border-rose-500 sm:text-sm" routerLink="/user/{{ user.id }}/profile">
-                    <img class="object-cover rounded-full inline-block" src="http://localhost:81/assets/img/{{ user.imgAvatar }}"
-                      alt="imgAvatar" style="width: 37px; height: 37px; margin-right: 10px; margin-top:5px;">
-                    <p class="inline-block cursor-pointer hover:bg-purple-700">{{ user.username }}</p>
+                    <img class="object-cover rounded-full inline-block"
+                      src="http://localhost:81/assets/img/{{ user.imgAvatar }}" alt="imgAvatar"
+                      style="width: 37px; height: 37px; margin-right: 10px; margin-top:5px;">
+                    <p class="inline-block cursor-pointer hover:text-purple-700">{{ user.username }}</p>
                   </div>
                 </div>
 
               </div>
 
               <div *ngIf="usersReceived == null && researchEnded">
-                <div style="position: absolute; width: 57%; z-index: 40;" class="bg-white border rounded-md py-3 pl-10 pr-3 text-sm
+                <div style="position: absolute; width: 57%; z-index: 40;" class="hidden md:block bg-white border rounded-md py-3 pl-10 pr-3 text-sm
                   placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
                   focus:ring-rose-500 focus:border-rose-500 sm:text-sm relative">
                   <p class="inline-block">No se ha encontrado ningún usuario con nombre '{{ searchedPattern }}'</p>
@@ -90,7 +91,8 @@
                   src="http://localhost:81/assets/img/{{ notification.user_responsible.imgAvatar }}" alt="avatar">
                 <p *ngIf="notification.typeNotification != 2" (click)="notificationRead(notification.id, i)"
                   class="text-gray-600 text-sm mx-2">
-                  <a routerLink="/user/{{ notification.user_responsible.id }}/profile" class="font-bold"> {{ notification.user_responsible.username }} </a>
+                  <a routerLink="/user/{{ notification.user_responsible.id }}/profile" class="font-bold"> {{
+                    notification.user_responsible.username }} </a>
                   {{ notification.bodyNotification }}
                   <span class="font-bold"></span> . {{ notification.notification_date }}
                 </p>
@@ -148,7 +150,53 @@
   <!-- Mobile menu, show/hide based on menu state. -->
   <div class="hidden" id="mobile-menu2">
     <div class="px-2 pt-2 pb-3 space-y-1">
-      <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+      <div class="min-w-0 flex-1 md:px-8 lg:px-0 xl:col-span-7">
+        <div class="flex items-center px-2 pb-2 md:py-4 md:max-w-lg md:ml-28 lg:max-w-none lg:mx-0 xl:px-0">
+          <div class="w-full">
+            <label for="search" class="sr-only">Search</label>
+            <div class="relative">
+              <div class="pointer-events-none absolute inset-y-0 left-0 pl-3 flex items-center">
+                <!-- Heroicon name: solid/search -->
+                <svg class="block h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                  fill="currentColor" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                    clip-rule="evenodd" />
+                </svg>
+              </div>
+              <input autocomplete="off" (keyup)="searchUser($event)" id="search" name="search" class="block w-full bg-white border border-gray-300 rounded-md py-2 pl-10 pr-3 text-sm
+              placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
+              focus:ring-rose-500 focus:border-rose-500 sm:text-sm" placeholder="Buscar usuarios" type="search">
+
+            </div>
+            <!-- search box -->
+            <div *ngIf="searching">
+              <div *ngIf="usersReceived != null">
+                <div *ngFor="let user of usersReceived; index as i;">
+                  <div style="position:absolute; width: 91%; z-index: 40;" class="bg-white border border-gray-300 rounded-md py-2 pl-10 pr-2 text-sm
+                  placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
+                  focus:ring-rose-500 focus:border-rose-500 sm:text-sm" routerLink="/user/{{ user.id }}/profile">
+                    <img class="object-cover rounded-full inline-block"
+                      src="http://localhost:81/assets/img/{{ user.imgAvatar }}" alt="imgAvatar"
+                      style="width: 37px; height: 37px; margin-right: 10px; margin-top:5px;">
+                    <p class="inline-block cursor-pointer hover:text-purple-700">{{ user.username }}</p>
+                  </div>
+                </div>
+
+              </div>
+
+              <div *ngIf="usersReceived == null && researchEnded">
+                <div style="position: absolute; width: 57%; z-index: 40;" class="bg-white border rounded-md py-3 pl-10 pr-3 text-sm
+                  placeholder-gray-500 focus:outline-none focus:text-gray-900 focus:placeholder-gray-400 focus:ring-1
+                  focus:ring-rose-500 focus:border-rose-500 sm:text-sm relative">
+                  <p class="inline-block">No se ha encontrado ningún usuario con nombre '{{ searchedPattern }}'</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <a routerLink="/home"
         class="text-gray-800 hover:bg-indigo-600 hover:text-white block px-3 py-2 rounded-md text-base font-medium">Home</a>
 
