--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -55,12 +55,12 @@
       </div>
       <main class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7">
         <form #formPublication="ngForm" enctype="multipart/form-data" method="POST" class="flex flex-col" (ngSubmit)="createPublication(); formPublication.reset()">
-          <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
+          <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="mt-3 md:mt-0 w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
             rows="5" name="content" placeholder="Escribe algo...">
           </textarea>
 
           <label for="imgPublication" >
-            <svg class="w-7 h-7 relative cursor-pointer text-gray-800" style="margin-top:-6%; margin-left:3%;" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
+            <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800" style="margin-left:3%;" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
           </label>
           <!-- TODO: button desselect images -->
           <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
