--- a/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
@@ -48,11 +48,11 @@
       </div>
     </nav>
   </div>
-  <div *ngIf="userlist == null && typeList  == 'followers'" class="col-span-6 ml-auto">
-      <i class="fas fa-users-slash inline-block mr-6" style="font-size: 25px;"></i><p class="text-2xl content-center mt-16 inline-block">Todavía no tienes ningún seguidor</p>
+  <div *ngIf="userlist == null && typeList  == 'followers'" class="col-span-6 ml-6 h-96 md:ml-auto">
+      <i class="fas fa-users-slash inline-block mr-6 text-lg md:text-2xl"></i><p class="text-lg md:text-2xl content-center mt-16 inline-block">Todavía no tienes ningún seguidor</p>
   </div>
-  <div *ngIf="userlist == null && typeList == 'followed'" class="col-span-6 ml-auto">
-      <i class="fas fa-users-slash inline-block mr-6" style="font-size: 25px;"></i><p class=" text-2xl content-center mt-16 inline-block">Todavía no sigues a ningún usuario </p>
+  <div *ngIf="userlist == null && typeList == 'followed'" class="col-span-6 ml-6 h-96 md:ml-auto">
+      <i class="fas fa-users-slash inline-block mr-6 text-lg md:text-2xl"></i><p class=" text-lg md:text-2xl content-center mt-16 inline-block">Todavía no sigues a ningún usuario </p>
   </div>
   <div class="block lg:col-span-4 pt-8">
     <div *ngIf="userlist != null">
