--- a/artist4all_angular/src/app/components/public/landing/landing.component.html
+++ b/artist4all_angular/src/app/components/public/landing/landing.component.html
@@ -12,13 +12,9 @@
           </div>
           <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-80 lg:px-8">
             <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
-              <span class="block text-white">Artist4All.</span>
+              <span class="block text-white">Artist4All</span>
             </h1>
-            <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
-              Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet
-              fugiat veniam occaecat fugiat aliqua.
-            </p>
-            <div class="mt-10 max-w-sm mx-auto sm:max-w-none sm:flex sm:justify-center">
+            <div class="mt-28 max-w-sm mx-auto sm:max-w-none sm:flex sm:justify-center">
               <div class="space-y-4 sm:space-y-0 sm:mx-auto sm:inline-grid sm:grid-cols-2 sm:gap-5">
                 <a routerLink="/login"
                   class="flex items-center justify-center px-4 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-indigo-700 bg-white hover:bg-indigo-50 sm:px-8">
