--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -96,12 +96,15 @@
                   {{ notification.bodyNotification }}
                   <span class="font-bold"></span> . {{ notification.notification_date }}
                 </p>
-                <button *ngIf="notification.typeNotification == 2" class="focus:outline-none"
+                <div>
+                  <p class="ml-2 mr-2">Solicitud de amistad</p>
+                </div>
+                <button *ngIf="notification.typeNotification == 2" class="focus:outline-none mr-3"
                   (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 3)">
-                  <i class="fas fa-check-circle text-green-600 hover:text-green-400"></i>Aceptar</button>
+                  <i class="fas fa-check-circle md:ml-10 mr-1 text-green-600 hover:text-green-400"></i>Aceptar</button>
                 <button *ngIf="notification.typeNotification == 2" class="focus:outline-none"
                   (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)">
-                  <i class="fas fa-times-circle text-red-700 hover:text-red-500"></i>Rechazar</button>
+                  <i class="fas fa-times-circle text-red-700 mr-1 hover:text-red-500"></i>Rechazar</button>
                 <!--<button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                 (click)="notificationRead(notification.id, i)">
                   <i class="fas fa-check-double hover:text-gray-500"></i>Leído</button>-->
