--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -55,19 +55,18 @@
           <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="mt-3 md:mt-0 w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
             rows="5" name="content" placeholder="Escribe algo...">
           </textarea>
-
           <label for="imgPublication" >
             <svg class="-mt-14 w-7 h-7 relative cursor-pointer text-gray-800" style="margin-left:3%;" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
           </label>
-          <!-- TODO: button desselect images, fix display of images and error message according to input submit (block input submit if not valid) -->
+          <!-- TODO: button desselect images, fix display of images and error message according-->
           <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
           <!-- <button class="inline-block" type="button" (click)="removeSelectedImgs()">Eliminar las imágenes</button> -->
         <img *ngFor='let url of images'  class="inline-block" [src]="url" height="150" width="200px" style="margin: 5px;"> <br/>
           <div class="w-full flex justify-end" style="margin-bottom: -35px">
-            <button type="submit" style="top: -95px; right: 10px; max-width: 100px;"
-              class="flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative">
-              Publicar
-            </button>
+               <!-- TODO: button styles when disable to distinguish when u can send form -->
+            <input type="submit" style="top: -95px; right: 10px; max-width: 100px;" [disabled]="bodyPublication == '' || showingImgHint"
+              class="flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative"
+              value="Publicar"/>
           </div>
         </form>
         <div *ngIf="showingImgHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md -mt-8 mb-2 text-sm">
