--- a/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/settings/user-settings-profile/user-settings-profile.component.html
@@ -266,11 +266,10 @@
               <button routerLink="/home"
                 class="mb-6 md:mb-0 bg-white border border-gray-300 rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
                 Volver a la home</button>
-             <!-- TODO: fix (block input submit if not valid) -->
-              <button type="submit" [disabled]="formProfile.invalid"
-                class="ml-5 mb-6 md:mb-0 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500">
-                Guardar los cambios
-              </button>
+             <!-- TODO: button styles when disable to distinguish when u can send form -->
+             <input type="submit" [disabled]="formProfile.invalid || username == '' || name == '' || surname1 == '' || surname2 == '' || email == ''"
+             class="ml-5 bg-blue-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-light-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-light-blue-500"
+             value="Guardar los cambios"/>
             </div>
           </div>
         </form>
