--- a/artist4all_angular/src/app/components/public/contact/contact.component.html
+++ b/artist4all_angular/src/app/components/public/contact/contact.component.html
@@ -1,5 +1,5 @@
 <app-user-navbar></app-user-navbar>
-<div class="relative bg-white">
+<div class="relative">
   <div class="lg:absolute lg:inset-0">
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover lg:absolute lg:h-full z-0"
